k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: server
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
