k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-example
  namespace: database
spec:
  selector:
    matchLabels:
      tier: database
  serviceName: mysql-headless
  replicas: 4
  template:
    metadata:
      labels:
        tier: database
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: mysql-persistence

  volumeClaimTemplates:
  - metadata:
      name: mysql-persistence
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 3Gi
