k8s/mysql-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
spec:
  clusterIP: None
  selector:
    tier: database
  ports:
  - port: 3306
