k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-http-app-service
  namespace: server
  labels:
    app: go-http-app
    tier: backend
spec:
  selector:
    tier: backend
  ports:
  - name: go-http-app-backend
    port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
