k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: server
  annotations:
    # Define which ingress class this manifest will use
    kubernetes.io/ingress.class: "nginx"
    # Point our cluster-issuer.yaml to this ingress
    cert-manager.io/issuer: "letsencrypt-example"
    # Force redirect HTTP > HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    name: nginx-ingress
spec:
  tls:
    - hosts:
    # For this TLS cert work, we mut config your DNS to point
    # to Kuberentes cluster load balancer IP (external ip from nginx ingress in this case)
      - "example.com.br" 
      # This secret is generated by our cluster-issuer.yaml (cert-manager)
      secretName: "tls-example-letsencrypt"
  rules:
    - host: "example.com.br" # We are using Kind (not managed k8s) to exemplify. Not real DNS
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: go-http-app-service
                port:
                  number: 80
